tests/integration/snapshots/integration__help_text_tests__subcommand_check.snap
---
source: tests/integration/help_text_tests.rs
expression: stdout
---
Check if any files are due; exits 100 if so

Usage: cycledit check [OPTIONS] [PATHSPECS]...

Arguments:
  [PATHSPECS]...  Paths/globs to include (default: all)

Options:
      --exclude <EXCLUDES>  Paths/globs to exclude
      --cycle <CYCLE>       Total cycle duration (default: 1 year) [default: P1Y]
      --chunk <CHUNK>       Chunk duration (default: 7 days) [default: P7D]
  -h, --help                Print help
