tests/integration/snapshots/integration__help_text_tests__subcommand_list.snap
---
source: tests/integration/help_text_tests.rs
expression: stdout
---
List files with their last-modified date

Usage: cycledit list [OPTIONS] [PATHSPECS]...

Arguments:
  [PATHSPECS]...  Paths/globs to include (default: all)

Options:
      --exclude <EXCLUDES>  Paths/globs to exclude
  -h, --help                Print help
